[gd_scene load_steps=49 format=4 uid="uid://du6dg3w2q0m80"]

[ext_resource type="Script" uid="uid://cjhal7om24y2c" path="res://scenes/Days/DayThree/d3_bedroom.gd" id="1_or88v"]
[ext_resource type="PackedScene" uid="uid://c8wffxipu48vg" path="res://scenes/player.tscn" id="1_rf1mp"]
[ext_resource type="TileSet" uid="uid://dyf0c38hkcw8q" path="res://apt_tiles.tres" id="2_or88v"]
[ext_resource type="Texture2D" uid="uid://mvgkrnayxjlf" path="res://assets/misc/square.png" id="2_s6uye"]
[ext_resource type="PackedScene" uid="uid://lyewe0q5cjnt" path="res://scenes/Objects/bed.tscn" id="3_a4q0v"]
[ext_resource type="PackedScene" uid="uid://c014t28xfb40m" path="res://scenes/Objects/radiator.tscn" id="4_s6uye"]
[ext_resource type="PackedScene" uid="uid://i08cixlwo7qb" path="res://scenes/Objects/bedsideCabinet.tscn" id="5_1l6du"]
[ext_resource type="PackedScene" uid="uid://dx8tl06100qlm" path="res://scenes/interact_indicator.tscn" id="6_qnf5k"]
[ext_resource type="Texture2D" uid="uid://qhcs6stv71ts" path="res://assets/objects/carpet.png" id="8_wngcm"]
[ext_resource type="Texture2D" uid="uid://bm0b03u6il0ke" path="res://assets/misc/spotlight.png" id="9_ld16a"]
[ext_resource type="PackedScene" uid="uid://bfo0d7h2e0dkd" path="res://scenes/Objects/closet_d3.tscn" id="9_or88v"]
[ext_resource type="Texture2D" uid="uid://b82wipn7s8aq5" path="res://assets/objects/bedroom_table.png" id="10_2yd7u"]
[ext_resource type="Texture2D" uid="uid://jdo75bmqq2qp" path="res://assets/objects/bedroom_chair.png" id="11_g2ca2"]
[ext_resource type="Texture2D" uid="uid://b5hki7kvg72vf" path="res://assets/misc/dust_particle.png" id="12_fqwto"]
[ext_resource type="Texture2D" uid="uid://bs7cxyqisn674" path="res://scenes/Days/DayThree/d3.tres" id="14_or88v"]
[ext_resource type="PackedScene" uid="uid://cpuj6ktdfqhdu" path="res://scenes/change_room.tscn" id="15_a4q0v"]
[ext_resource type="PackedScene" uid="uid://d24rahutnton5" path="res://scenes/DialogueArea.tscn" id="17_wngcm"]
[ext_resource type="Script" uid="uid://divt8ny53jpna" path="res://scripts/DialogueExportResource.gd" id="18_ld16a"]
[ext_resource type="Script" uid="uid://c7hf8sppb4268" path="res://scripts/DialogueTextResource.gd" id="19_2yd7u"]
[ext_resource type="AudioStream" uid="uid://dy3b7ol61unl7" path="res://assets/sfx/ian_voice.wav" id="20_g2ca2"]
[ext_resource type="Texture2D" uid="uid://c00lpo5jtae1x" path="res://assets/Spritesheets/player_idle_up.png" id="21_2yd7u"]
[ext_resource type="Script" uid="uid://bj218rqao0syu" path="res://scripts/DialogueFunctionResource.gd" id="22_g2ca2"]
[ext_resource type="AudioStream" uid="uid://b51t5mrbwbh16" path="res://assets/sfx/keyboard_click.mp3" id="23_g2ca2"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_614l8"]
polygon = PackedVector2Array(80, 16, 86, 16, 86, -21, -6, -21, -6, 54, 48, 54, 48, 48, 0, 48, 0, 0, 80, 0)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_j26m0"]
polygon = PackedVector2Array(64, 48, 80, 48, 80, 32, 86, 32, 86, 54, 64, 54)

[sub_resource type="Gradient" id="Gradient_i04c0"]
offsets = PackedFloat32Array(0, 0.7310606)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cbwy0"]
gradient = SubResource("Gradient_i04c0")
width = 244
height = 244
fill = 1
fill_from = Vector2(0.5, 0.4871795)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_68amf"]
size = Vector2(20, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8tby"]
size = Vector2(8, 10)

[sub_resource type="Curve" id="Curve_w5swn"]
_data = [Vector2(0, 0.56320006), 0.0, 0.0, 0, 0, Vector2(0.27480915, 1), 0.0, 0.0, 0, 0, Vector2(0.71374047, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.56320006), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_dsoqk"]
width = 2048
curve = SubResource("Curve_w5swn")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rr8s5"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(38, 30, 1)
direction = Vector3(-1, 0, 0)
spread = 180.0
initial_velocity_min = 0.099999994
initial_velocity_max = 0.5
gravity = Vector3(-1, 2, 0)
scale_curve = SubResource("CurveTexture_dsoqk")
alpha_curve = ExtResource("14_or88v")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s6uye"]
size = Vector2(20, 7)

[sub_resource type="Resource" id="Resource_fqwto"]
script = ExtResource("19_2yd7u")
text = "*my laptop"
text_speed = 14.0
text_sound = ExtResource("20_g2ca2")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_68ayb"]
size = Vector2(16, 8)

[sub_resource type="Resource" id="Resource_fkvcy"]
script = ExtResource("19_2yd7u")
text = "*A radiator. it keeps me warm"
text_speed = 14.0
text_sound = ExtResource("20_g2ca2")
text_volume_db = 1
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_614l8"]
size = Vector2(4, 17)

[sub_resource type="Resource" id="Resource_0dxpw"]
script = ExtResource("19_2yd7u")
text = "*It's my bedside table"
text_speed = 14.0
text_sound = ExtResource("20_g2ca2")
text_volume_db = 1
text_volume_pitch_min = 0.7
text_volume_pitch_max = 0.75
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j26m0"]
size = Vector2(4, 7)

[sub_resource type="Resource" id="Resource_wngcm"]
script = ExtResource("19_2yd7u")
text = "*my bed. it's empty"
text_speed = 14.0
text_sound = ExtResource("20_g2ca2")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cbwy0"]
size = Vector2(10, 11)

[sub_resource type="Resource" id="Resource_d3b3h"]
script = ExtResource("19_2yd7u")
text = "*it's my closet"
text_speed = 14.0
text_sound = ExtResource("20_g2ca2")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5swn"]
size = Vector2(13, 7)

[sub_resource type="Resource" id="Resource_hk2v5"]
script = ExtResource("22_g2ca2")
target_path = NodePath("..")
function_name = "_work_timer"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fqwto"]
size = Vector2(16, 8)

[sub_resource type="Resource" id="Resource_2yd7u"]
script = ExtResource("19_2yd7u")
text = "*why am i doing this?"
text_speed = 12.0
text_sound = ExtResource("20_g2ca2")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_g2ca2"]
script = ExtResource("22_g2ca2")
target_path = NodePath("..")
function_name = "_stand_up_timer"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2ca2"]
size = Vector2(31, 31)

[node name="Bedroom" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_or88v")

[node name="WhiteScreen" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="Sprite2D" type="Sprite2D" parent="WhiteScreen"]
position = Vector2(160.5, 89.99999)
scale = Vector2(327.00003, 188)
texture = ExtResource("2_s6uye")

[node name="Player" parent="." instance=ExtResource("1_rf1mp")]
position = Vector2(24, 10)
speed = 50.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(42, 19)

[node name="LightOccluder2D2" type="LightOccluder2D" parent="."]
z_index = -1
occluder = SubResource("OccluderPolygon2D_614l8")

[node name="LightOccluder2D3" type="LightOccluder2D" parent="."]
z_index = -1
occluder = SubResource("OccluderPolygon2D_j26m0")

[node name="Tiles" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAIAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAEAAAAAAAAAAAADAAEAAAAAAAAAAAACAAEAAAAAAAAAAAABAAEAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAAAP//AAADAAEAAAABAP//AAADAAEAAAACAP//AAADAAEAAAADAP//AAADAAEAAAAEAP//AAADAAEAAAD/////AAACAAEAAAAFAP//AAAEAAEAAAAFAP7/AAAEAAAAAAAEAP7/AAADAAAAAAADAP7/AAADAAAAAAACAP7/AAADAAAAAAABAP7/AAADAAAAAAAAAP7/AAADAAAAAAD///7/AAACAAAAAAD//wAAAAACAAIAAAAFAAAAAAAEAAMAAAAFAAIAAAABAAMAAAD//wIAAAACAAIAAAD//wEAAAACAAIAAAD//wMAAAACAAQAAAAAAAMAAAADAAQAAAABAAMAAAADAAQAAAACAAMAAAAAAAQAAAAEAAMAAAABAAQAAAAFAAMAAAAEAAQAAAADAAMAAAAFAAMAAAAFAAEAAAAFAAEAAAA=")
tile_set = ExtResource("2_or88v")
metadata/_edit_lock_ = true

[node name="bed" parent="." instance=ExtResource("3_a4q0v")]
position = Vector2(8, -2)

[node name="Radiator" parent="." instance=ExtResource("4_s6uye")]
position = Vector2(2, 27)

[node name="bedsideCabinet" parent="." instance=ExtResource("5_1l6du")]
position = Vector2(23, 1)

[node name="InteractIndicator" parent="." instance=ExtResource("6_qnf5k")]
modulate = Color(1, 1, 1, 0)
position = Vector2(8, -12)

[node name="Carpet" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(41, 27)
texture = ExtResource("8_wngcm")

[node name="closet" parent="." instance=ExtResource("9_or88v")]
position = Vector2(71, -3)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(96, 24)
scale = Vector2(1, 1.0124278)
color = Color(1, 1, 0.8156863, 1)
energy = 0.74
shadow_enabled = true
texture = ExtResource("9_ld16a")

[node name="ambience" type="CanvasModulate" parent="."]
color = Color(0.7233474, 0.72355604, 0.8178685, 1)

[node name="ceilingLight" type="PointLight2D" parent="."]
position = Vector2(41, 19)
scale = Vector2(0.5204918, 0.5204918)
color = Color(0.9843529, 0.98745495, 0.9660104, 1)
energy = 0.2
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_cbwy0")

[node name="BedroomTable" type="Sprite2D" parent="."]
position = Vector2(45, 1)
texture = ExtResource("10_2yd7u")

[node name="BedroomChair" type="Sprite2D" parent="."]
position = Vector2(45, 7)
texture = ExtResource("11_g2ca2")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(45, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_68amf")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(45, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_i8tby")

[node name="dust" type="GPUParticles2D" parent="."]
position = Vector2(40, 15)
amount = 25
texture = ExtResource("12_fqwto")
speed_scale = 0.2
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_rr8s5")
metadata/_edit_lock_ = true

[node name="toLivingroom" parent="." instance=ExtResource("15_a4q0v")]
position = Vector2(56, 55)
wanted_room_path = "res://scenes/Days/DayThree/d3_livingroom.tscn"
wanted_player_pos = Vector2(24, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="toLivingroom"]
shape = SubResource("RectangleShape2D_s6uye")

[node name="toBalcony" parent="." instance=ExtResource("15_a4q0v")]
position = Vector2(87, 24)
rotation = -1.5707964
wanted_room_path = "res://scenes/Days/DayThree/d3_balcony.tscn"
wanted_player_pos = Vector2(14, 46)

[node name="CollisionShape2D" type="CollisionShape2D" parent="toBalcony"]
shape = SubResource("RectangleShape2D_s6uye")

[node name="deskDialogue" parent="." instance=ExtResource("17_wngcm")]
position = Vector2(45, 7)
dialogue = Array[ExtResource("18_ld16a")]([SubResource("Resource_fqwto")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="deskDialogue"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_68ayb")

[node name="radiator_dialog" parent="." instance=ExtResource("17_wngcm")]
position = Vector2(1, 33)
dialogue = Array[ExtResource("18_ld16a")]([SubResource("Resource_fkvcy")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="radiator_dialog"]
position = Vector2(1, 2.5)
shape = SubResource("RectangleShape2D_614l8")

[node name="b_cabinet_dialog" parent="." instance=ExtResource("17_wngcm")]
position = Vector2(23, 1)
dialogue = Array[ExtResource("18_ld16a")]([SubResource("Resource_0dxpw")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="b_cabinet_dialog"]
shape = SubResource("RectangleShape2D_j26m0")

[node name="bed_dialog" parent="." instance=ExtResource("17_wngcm")]
position = Vector2(8, 7)
dialogue = Array[ExtResource("18_ld16a")]([SubResource("Resource_wngcm")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="bed_dialog"]
shape = SubResource("RectangleShape2D_cbwy0")

[node name="closet_dialog" parent="." instance=ExtResource("17_wngcm")]
position = Vector2(71, 1)
dialogue = Array[ExtResource("18_ld16a")]([SubResource("Resource_d3b3h")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="closet_dialog"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_w5swn")

[node name="PlayerWorking" type="Sprite2D" parent="."]
visible = false
position = Vector2(45, 2)
texture = ExtResource("21_2yd7u")
hframes = 2
frame = 1

[node name="work_func" parent="." instance=ExtResource("17_wngcm")]
position = Vector2(45, 7)
only_activate_once = true
dialogue = Array[ExtResource("18_ld16a")]([SubResource("Resource_hk2v5")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="work_func"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_fqwto")
disabled = true

[node name="workDialog" parent="." instance=ExtResource("17_wngcm")]
position = Vector2(45, 8)
activate_instant = true
only_activate_once = true
dialogue = Array[ExtResource("18_ld16a")]([SubResource("Resource_2yd7u"), SubResource("Resource_g2ca2")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="workDialog"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_g2ca2")
disabled = true

[node name="WorkTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="InteractIndicatorType" parent="." instance=ExtResource("6_qnf5k")]
modulate = Color(1, 1, 1, 0)
z_index = 2
position = Vector2(45, -15)

[node name="keyboard_sounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("23_g2ca2")
volume_db = -0.001

[node name="standUpDeskTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="WorkTimer" to="." method="_on_work_timer_timeout"]
[connection signal="timeout" from="standUpDeskTimer" to="." method="_on_stand_up_desk_timer_timeout"]
